# OGLPG

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
CHPT1/: CHPT1.cpp  CHPT1.h  CMakeLists.txt  LoadShaders.cpp  LoadShaders.h  Shader.cpp  Shader.h  Window.cpp  Window.h  vgl.h
CHPT1/assets/shaders/: triangles.frag  triangles.vert
